# realtime-saas-analytics-pipeline

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
airflow/: .env.example  Dockerfile  docker-compose.yaml
airflow/config/: airflow.cfg
airflow/dags/: pipeline_dag.py
airflow/plugins/: saas_databricks_operator.py
databricks/: 01_bronze_ingestion.ipynb  02_silver_transform.ipynb  03_gold_aggregation.ipynb
docs/: architecture.md  data_dictionary.md  pipeline_flow.md  setup_guide.md  snowflake_setup.sql
infra/iam/: databricks_s3_policy.json  snowflake_s3_policy.json
metabase/: docker-compose.yml
producer/: config.py  event_generator.py  historical_seed.py  kafka_producer.py  live_stream.py  main.py  requirements.txt
producer/schemas/: saas_event.avsc
snowflake/: adhoc_queries.sql  setup.sql
